<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:textSize="48sp"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:elevation="4dp"
        android:id="@+id/buttonCurrentPlayer"
        android:layout_margin="4dp"
        android:background="@drawable/mask"
        android:layout_above="@id/topRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewCurrentPlayer"
            android:focusable="false"
            android:clickable="false"
            android:drawablePadding="4dp"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center_vertical"
            android:text="@string/current_player"
            android:drawableStart="@drawable/icon_player"
            android:layout_width="wrap_content"
            android:layout_height="56dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/topRow"
        android:orientation="horizontal"
        android:layout_above="@id/bottomRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/buttonPlay"
            style="@style/MainMenuButtonRemastered">

            <TextView
                style="@style/MainMenuButtonText"
                android:textColor="@color/colorScheme3Light"
                android:drawableTint="@color/colorScheme3Light"
                android:drawableEnd="@drawable/icon_play"
                android:text="@string/play"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonHighscores"
            style="@style/MainMenuButtonRemastered">

            <TextView
                android:textColor="@color/colorScheme4Light"
                android:drawableTint="@color/colorScheme4Light"
                android:drawableEnd="@drawable/icon_highscores"
                android:text="@string/highscores"
                style="@style/MainMenuButtonText"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/bottomRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/buttonTutorial"
            style="@style/MainMenuButtonRemastered">

            <TextView
                android:textColor="@color/colorScheme2Medium"
                android:drawableTint="@color/colorScheme2Medium"
                style="@style/MainMenuButtonText"
                android:drawableEnd="@drawable/icon_tutorial"
                android:text="@string/tutorial"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonSettings"
            style="@style/MainMenuButtonRemastered">

            <TextView
                android:drawableEnd="@drawable/icon_settings"
                android:text="@string/settings"
                style="@style/MainMenuButtonText"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>