<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_background"
    android:backgroundTint="#40d040"
    android:elevation="4dp"
    android:clipToPadding="true"
    android:orientation="vertical"
    android:layout_margin="6dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:elevation="4dp"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You win"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:textColor="@android:color/white"
                android:id="@+id/buttonPlayAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorScheme2Light"
                android:text="Play again" />

            <Button
                android:textColor="@android:color/white"
                android:id="@+id/buttonExit"
                android:backgroundTint="@color/colorScheme4Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit" />
        </LinearLayout>
        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/textViewLevel"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            style="@style/GameInfoTextView"
            android:text="@string/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/textViewTime"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            style="@style/GameInfoTextView"
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textViewScore"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/final_score"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>