<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScheme1Medium"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#60f060"
                android:text="@string/retry" />

            <Button
                android:id="@+id/buttonExit"
                android:backgroundTint="@color/colorScheme4Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit" />
        </LinearLayout>
        <TextView
            android:id="@+id/textViewScore"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            style="@style/GameInfoTextView"
            android:text="Score: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textViewTime"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            style="@style/GameInfoTextView"
            android:text="Time: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>