<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:paddingHorizontal="12dp"
    android:background="@drawable/mask"
    android:orientation="horizontal">

    <TextView
        android:drawablePadding="4dp"
        android:id="@+id/textViewPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.5"
        android:drawableStart="@drawable/icon_player"
        android:drawableTint="@color/colorScheme3Light"
        android:text="Player"
        android:textAllCaps="true"
        android:textColor="@color/colorScheme3Light"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:text="@string/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textStyle="bold"
            android:id="@+id/textViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3129" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textStyle="bold"
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12.12" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDifficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/easy"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>