<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/outsideView0"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/titleSubmenu"
            android:focusable="false"
            android:clickable="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="Highscores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:elevation="4dp"
        android:background="@drawable/button_background"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:id="@+id/buttonBack"
            android:padding="8dp"
            android:drawablePadding="4dp"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/back" />

        <LinearLayout
            android:layout_below="@id/buttonBack"
            android:orientation="horizontal"
            android:id="@+id/buttonRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_margin="4dp"
                android:textColor="@color/colorScheme3Light"
                android:text="@string/easy"
                style="?buttonBarButtonStyle"
                android:id="@+id/buttonShowScoresEasy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_margin="4dp"
                android:textColor="@color/colorScheme4Light"
                android:text="@string/medium"
                style="?buttonBarButtonStyle"
                android:id="@+id/buttonShowScoresMedium"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_margin="4dp"
                android:textColor="@color/colorScheme1Light"
                android:text="@string/hard"
                style="?buttonBarButtonStyle"
                android:id="@+id/buttonShowScoresHard"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <ListView
            android:animateLayoutChanges="true"
            android:layout_below="@id/buttonRow"
            android:id="@+id/listViewHighscores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:gravity="center"
            android:visibility="gone"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="No scores yet. Go play the game!"
            android:id="@+id/emptyView"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/outsideView1"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</LinearLayout>