<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/outsideView0"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/titleSubmenu"
            android:focusable="false"
            android:clickable="false"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/tutorial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:elevation="4dp"
        android:background="@drawable/button_background"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:id="@+id/buttonBack"
            android:padding="8dp"
            android:drawablePadding="4dp"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/back" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:layout_weight="3"
            android:id="@+id/imageViewTutorial"
            android:src="@drawable/tutorial"
            android:layout_width="wrap_content"
            android:layout_height="0dp"/>
        <TextView
            android:layout_marginHorizontal="8dp"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp"
            android:id="@+id/textViewTutorial"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="Press the darker tile to advance to the next level"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

            <Button
                android:id="@+id/buttonNext"
                android:backgroundTint="@color/colorScheme3Light"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:layout_margin="8dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/outsideView1"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</LinearLayout>